<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/no_image_available"
        android:paddingBottom="20dp"
        android:contentDescription="@string/calender" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:paddingBottom="80dp"
        android:text="@string/thank_you_for_information"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/reviewButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/review"
        android:background="@color/colorSecondary"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"/>

</LinearLayout>
