<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="30dp"
    android:paddingTop="20dp"
    android:paddingRight="30dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/description"
        style="@style/CustomQuestionView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/description" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/resetBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mobileText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:text="@string/verification_code_sent"
            android:textAlignment="textStart"
            android:textColor="@color/labelColor"
            android:textSize="14sp"
            android:visibility="gone" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/timer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="@string/zero_seconds"
            android:textAlignment="center"
            android:textColor="@color/labelColor"
            android:textSize="15sp"
            android:visibility="gone" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/requestOtpBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/request_verification_code"
        android:textSize="12sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/otpText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:endIconMode="password_toggle"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_verification_code"
            android:inputType="textPassword"
            android:maxLength="4" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/verifyOtpBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/verify_verification_code"
        android:textSize="12sp"
        android:visibility="gone" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/notice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/notice_message"
        android:textAlignment="center"
        android:textColor="@color/labelColor"
        android:textSize="13sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/instruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/please_read_out_the_following_to_the_beneficiary_and_ask_for_their_permission"
        android:textSize="14sp"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/ic_whatsapp"
        android:contentDescription="@string/whatsapp"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:gravity="start">

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/smsScheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:visibility="gone" />

        </LinearLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/scheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:text="@string/i_am_giving_my_consent_for_receiving_health_service_reminders_and_information_about_health_benefit_schemes_on_whatsapp"
            android:textColor="@color/labelColor"
            android:textSize="12sp"
            android:visibility="gone" />

    </LinearLayout>

</LinearLayout>
