<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/my_gradient"
    android:orientation="vertical"
    android:padding="25dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/readyForQuiz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/ready_for_the_quiz"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/testYourSkill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/test_your_course_skill_in_our_short_quiz_section"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/putEverythingYouHaveLearned"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/put_everything_you_ve_learned_to_the_test_and_show_how_much_you_ve_learnt_so_far"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/questionCount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/_10_questions_15_20_minutes"
        android:textAlignment="center"
        android:textColor="@color/lightYellow"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_gravity="center"
        android:padding="30dp"
        android:layout_marginBottom="20dp"
        android:scaleType="centerInside"
        android:src="@drawable/start_quiz" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/startButton"
        style="@style/CustomLightButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?android:attr/actionBarSize"
        android:stateListAnimator="@null"
        android:text="@string/let_s_start" />

</LinearLayout>