<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/my_gradient"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="20dp">

    <ImageView
        android:id="@+id/courseImage"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/techo"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:scaleType="fitCenter"
        android:src="@drawable/well_done" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/well_done_you_ve_completed_the_quiz"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/progressbar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerInParent="true"
            android:indeterminate="false"
            android:max="100"
            android:progress="25"
            android:progressDrawable="@drawable/circular_progress_bar"
            android:secondaryProgress="100" />

        <TextView
            android:id="@+id/progressbarText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/_25"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <View
        android:id="@+id/separator1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="10dp"
        android:background="@android:color/white" />

    <LinearLayout
        android:id="@+id/layer1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1" />

    <LinearLayout
        android:id="@+id/layer2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="3dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1" />

    <View
        android:id="@+id/separator2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="10dp"
        android:background="@android:color/white" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/restartButton"
        style="@style/CustomLightButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?android:attr/actionBarSize"
        android:stateListAnimator="@null"
        android:text="@string/restart_quiz" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submitButton"
        style="@style/CustomLightButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?android:attr/actionBarSize"
        android:stateListAnimator="@null"
        android:text="@string/done" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/lockQuizButton"
        style="@style/CustomLightButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?android:attr/actionBarSize"
        android:stateListAnimator="@null"
        android:text="@string/lock_quiz_and_view_answer" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/reviewButton"
        style="@style/CustomLightButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?android:attr/actionBarSize"
        android:stateListAnimator="@null"
        android:text="@string/review_answer" />


</LinearLayout>