<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--Header-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivLogo"
                android:layout_width="180dp"
                android:layout_height="120dp"
                android:gravity="center"
                android:layout_marginTop="60dp"
                android:src="@drawable/medplat_argus"
                android:contentDescription="@string/techo" />

            <TextView
                android:id="@+id/versionView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/versionTextColor"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>

    <!--Content-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="clear_text"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/username" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="password_toggle"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/password"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/cbRememberMe"
            android:layout_width="match_parent"
            android:text="@string/remember_me"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="5dp"
            android:backgroundTint="@color/buttonBackground"
            android:minHeight="70dp"
            android:singleLine="true"
            android:text="@string/login"
            android:textColor="@color/toolbarTitleColor"
            android:textSize="20sp" />

    </LinearLayout>

    <!--Footer-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:gravity="bottom"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:weightSum="4"
            android:layout_marginBottom="10dp">

            <ImageView
                android:id="@+id/ivGov"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:src="@drawable/telangana_gov"
                android:contentDescription="@string/government_of_gujarat" />

            <ImageView
                android:id="@+id/iv_sewa_or_nhm_Logo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:src="@drawable/nhm"
                android:contentDescription="@string/national_health_mission" />

            <ImageView
                android:id="@+id/ivGvkEmri"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:src="@drawable/armaan"
                android:contentDescription="@string/gvk_emri" />

            <ImageView
                android:id="@+id/ivUnicef"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:src="@drawable/unicef"
                android:contentDescription="@string/gvk_emri" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:gravity="bottom|end"
                android:adjustViewBounds="true"
                android:src="@drawable/medplat"
                android:visibility="gone"
                android:contentDescription="@string/medplat" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>